Fixed mobile CSS
Fixed the footer overlapping the rest of the page on small screens

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -78,7 +78,12 @@ height: 200px;
     width: 95%;
     display: inline-block;
     text-align: center;
-    font-size: 12px;
+    font-size: 9px;
+}
+.License img
+{
+  width: 66px;
+  height: 23.25px;
 }
 
 .youtube-player { display: block; margin: 0 auto; width:100%; }
